# zhub

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: BRIDGE_PATTERN.md  CLOUDFLARED.md  DEPLOY.md  TUTORIAL.md
docs/superpowers/plans/: 2026-05-09-zhub-phase-0.7-to-1.0.md  2026-05-09-zhub-phase-4.0-brain-adapters.md
docs/superpowers/specs/: 2026-05-09-zhub-phase-0.7-to-1.0-design.md  2026-05-09-zhub-phase-1.5-1.6-1.3-design.md  2026-05-09-zhub-phase-1.7-1.2-1.1-1.8-design.md  2026-05-09-zhub-phase-4.0-brain-adapters-design.md  2026-05-10-zhub-phase-4.2b-tool-call-streaming-design.md  2026-05-10-zhub-phase-7.0-capability-only-ws-design.md  (+1 more)
examples/: README.md  ZAI_PUBLISH.md  connect_demo.py  council_demo.py  federation_demo.py  full_stack_demo.py  mcp_bridge.py  multi_brain_publisher.py  orchestrate_demo.py  publish_demo.py  session_bridge_publisher.py  tool_demo.py  zai_publish.py
js/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
js/examples/: connect.mjs  publish.mjs
js/src/: client.ts  errors.ts  index.ts  manifest.ts  protocol.ts
js/test/: client.test.ts  client_handle_chat.test.ts  client_handle_chat_async_returns_gen.test.ts  client_lifecycle.test.ts  client_nonerror_throw.test.ts  client_reconnect_stop.test.ts  client_stream.test.ts  client_url.test.ts  expose.test.ts  manifest.test.ts  manifest_mcp.test.ts  protocol.test.ts
kotlin/: LOKI_INTEGRATION.md  README.md  build.gradle.kts  settings.gradle.kts
tests/: test_brain_publish_handoff.py  test_brains_anthropic.py  test_brains_base.py  test_brains_cerebras.py  test_brains_empty_env.py  test_brains_groq.py  test_brains_ollama.py  test_brains_openai.py  test_brains_registry.py  test_brains_together_mistral_cohere.py  test_capability_injection.py  test_chat_ui.py  test_cli_doctor.py  test_cli_status.py  test_cli_up.py  test_client_chat_stream.py  test_client_disconnect_drain.py  test_client_lifecycle.py  test_client_nonstreaming_tool_calls.py  test_client_sync_generator.py  test_client_url.py  test_council.py  test_cross_hub_routing.py  test_cross_hub_ws.py  test_dashboard.py  test_e2e.py  test_entity.py  test_entity_extensions_http.py  test_entity_extensions_storage.py  test_entity_hint.py  test_exposure_access_policies.py  test_exposure_disconnect_drain.py  test_exposures.py  test_exposures_persistence.py  test_federation.py  test_federation_cache.py  test_generator_nonstreaming.py  test_handle_chat_async_returns_gen.py  test_handle_chat_dict_mutation.py  test_handle_chat_none_result.py  (+39 more)
zhub/: __init__.py  __main__.py  chat.html  cli_doctor.py  cli_status.py  cli_up.py  client.py  dashboard.html  entity.md  errors.py  federation.py  hub_identity.py  manifest.py  mcp.py  mcp_server.py  persistence.py  protocol.py  ratelimit.py  server.py  signing.py  tunnel.py  validate.py
zhub/brains/: __init__.py  _openai_compat.py  anthropic.py  base.py  cerebras.py  cohere.py  groq.py  mistral.py  ollama.py  openai.py  together.py
(+14 files in other folders)
