[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhub"
version = "0.1.0"
description = "WiFi for AIs — drop-in skill that lets any AI publish a discoverable, controllable endpoint."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zawwar Sami", email = "zawwarsami16@gmail.com" }]
keywords = ["ai", "agent", "endpoint", "tunnel", "openai-compatible", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "websockets>=12",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Zawwarsami16/zhub"
Repository = "https://github.com/Zawwarsami16/zhub"
Issues = "https://github.com/Zawwarsami16/zhub/issues"

[project.scripts]
zhub-server = "zhub.server:main"

[tool.hatch.build.targets.wheel]
packages = ["zhub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
