[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhub"
version = "0.2.0"
description = "WiFi for AIs — substrate that lets any AI publish a discoverable, OpenAI-compat endpoint reachable from anywhere."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zawwar Sami", email = "zawwarsami16@gmail.com" }]
keywords = ["ai", "agent", "endpoint", "tunnel", "openai-compatible", "mcp", "llm", "claude", "ollama", "groq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Communications :: Chat",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
]

dependencies = [
    "websockets>=12",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
crypto = [
    "cryptography>=42",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "cryptography>=42",
    "httpx>=0.27",
]
brains = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Zawwarsami16/zhub"
Repository = "https://github.com/Zawwarsami16/zhub"
Issues = "https://github.com/Zawwarsami16/zhub/issues"

[project.scripts]
zhub = "zhub.__main__:main"
zhub-server = "zhub.server:main"

[tool.hatch.build.targets.wheel]
packages = ["zhub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
